--- a/package.json
+++ b/package.json
@@ -2,13 +2,33 @@
   "name": "@sms/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve": "nx serve",
+    "test": "nx test",
+    "db:push": "dotenv -e .env.database -- prisma db push --schema apps/backend/prisma/schema.prisma",
+    "prisma:generate": "dotenv -e .env.database -- prisma generate --schema apps/backend/prisma/schema.prisma",
+    "prisma:migrate": "dotenv -e .env.database -- prisma migrate dev --schema apps/backend/prisma/schema.prisma",
+    "db:seed": "dotenv -e .env.database -- ts-node --compilerOptions '{\"module\":\"commonjs\"}' apps/backend/prisma/seed.ts"
+  },
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.0.6",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^8.0.7",
+    "@prisma/client": "6.0.1",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -28,14 +48,20 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "nx": "20.1.4",
     "prettier": "^2.6.2",
+    "prisma": "^6.0.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
